added HTML elements set up supabase and added script, URL keys and client to JS and HTML

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         
     </header>
     <main>
+        <section>
+           <h1>Alchemy Speaks</h1>
+           <button id="login">login</button>
+           <button id="create">create</button>
+        </section>
         
     </main>
     <footer>
