added Auth page, linked login button to auth page in html

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <main>
         <section>
            <h1>Alchemy Speaks</h1>
-           <button id="login">login</button>
-           <button id="create">create</button>
+           <button id="login-button" onclick="window.location.href='/auth-page'">login</button>
+           <button id="create-button">create</button>
         </section>
         
     </main>
