--- a/auth-page/index.html
+++ b/auth-page/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <h1>New User Sign up!</h1>
-        <form id=" sign-up">
+        <form id="sign-up">
             <label for="email">Email:</label>
             <input type="email" name="email" id="email"/>
             <label for="password">Password:</label>
@@ -18,11 +18,11 @@
             <button>Sign Up</button>
         </form>
         <h1>User Sign in</h1>
-        <form id=" sign-in">
+        <form id="sign-in">
             <label for="email">Email:</label>
-            <input type="email" name="email" id="email"/>
+            <input type="email" name="email" id="signin-email"/>
             <label for="password">Password:</label>
-            <input type="password" name="password" id="password"/>
+            <input type="password" name="password" id="signin-password"/>
             <button>Sign In</button>
         </form>
     </main>
