debugged auth page, added login/logout button on homepage

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h1>Alchemy Speaks</h1>
 
         <div>
-              <button id="login-button" onclick="window.location.href='/auth-page'">login</button>
-           <button id="create-button">create</button>
+              <button class="hide" id="login-button">Login/Sign-up</button>
+           <button id="create-button">New Post</button>
           </div>
      
     </header>
