--- a/create-page/index.html
+++ b/create-page/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./create.css">
     <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <title>Create New Post</title>
 </head>
 <body>
     <section>
+        <a href="/">Back Home</a>
         <form id="new-post">
             <label for="title">Title</label>
             <input type="text" name="title" id="title"/>
