--- a/create-page/index.html
+++ b/create-page/index.html
@@ -9,9 +9,10 @@
     <title>Create New Post</title>
 </head>
 <body>
+    <a href="/">Back Home</a>
     <section>
-        <a href="/">Back Home</a>
         <form id="new-post">
+            <h2>New Post</h2>
             <label for="title">Title</label>
             <input type="text" name="title" id="title"/>
             <label for="description">Description</label>
